testsuites/LLT/compiler/Diagnose/lex_test/lex_unknown_start_of_token/case5.expect.out
error: unknown start of token: \u{0000}
  ==> case5.cj:15:1:
   | 
15 | \u{0000}
   | ^^^^^^^^ unknown start of token: \u{0000}
   | 

1 error generated, 1 error printed.
